syntax = "proto3";

package com.example.order;

option java_multiple_files = true;
option java_package = "com.example.orderservice.proto";
option java_outer_classname = "OrderServiceProto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
}

// Запрос на создание пользователя
message CreateOrderRequest {
  string user_id = 1;
  double amount = 2;
}

// Ответ с данными пользователя
message OrderResponse {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
}

// Запрос на получение данных пользователя
message GetOrderRequest {
  string order_id = 1;
}